fix: change toList() to collectors